# ACS_CUDA_Project

./: .gitignore  README.md  heat1d.py  heat2d.py  wave1d.py  wave2d.py
cuda-heat-equation/: ANALYSIS.md  CMakeLists.txt  results.csv
cuda-heat-equation/include/: fd_coefficients.h  metrics.h  stencil.h  vtk_export.h
cuda-heat-equation/python-implementation/: heat1d.py  heat2d.py
cuda-heat-equation/results/: benchmarks.csv
cuda-heat-equation/scripts/: plot_results.py  run_benchmarks.sh
cuda-heat-equation/src/: heat2d_cpu.cpp  heat2d_cuda.cu  heat2d_cuda_fp16.cu  heat2d_cuda_fp16_shared_mem_tiling.cu  heat2d_cuda_shared_mem_tiling.cu  heat3d_cpu.cpp  heat3d_cuda.cu  heat3d_cuda_fp16.cu  heat3d_cuda_fp16_shared_mem_tiling.cu  heat3d_cuda_shared_mem_tiling.cu  main.cpp  metrics.cpp  visualize_3d_vtk.cu
cuda-wave-equation/: CMakeLists.txt  visualize.ipynb
cuda-wave-equation/include/: fd_coefficients.h  metrics.h  stencil.h  vtk_export.h
cuda-wave-equation/src/: main.cpp  metrics.cpp  visualize_3d_vtk.cu  wave2d.cu  wave2d_cpu.cpp  wave2d_cuda.cu  wave2d_cuda_fp16.cu  wave3d_cpu.cpp  wave3d_cuda.cu  wave3d_cuda_fp16.cu
